projects/compiler/test/parser/try_else_error_eof.out
Error at %FILE_NAME%:1:18
Unexpected end of file:
  |  val x = try foo else
                      ^