projects/compiler/test/parser/try_else_error_eof.abra
val x = try foo else